[package]
name = "axfdtable"
version = "0.1.0"
edition = "2021"
authors = ["Yiding Wang <jdk_123456@tju.edu.cn>"]
description = "fd table for arceos file system"
license = "Mulan PSL v2"
homepage = "https://github.com/DINGBROK423/arceos.git"
repository = "https://github.com/DINGBROK423/arceos.git"

[features]
default = []

[dependencies]
log = "0.4"
spin = "0.9"
axio = { path = "../../crates/axio" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
flatten_objects = { path = "../../crates/flatten_objects" }
axerrno = { path = "../../crates/axerrno" }
